# cp-guard

./: .gitignore  Cargo.toml  flake.nix
cp-guard/: Cargo.toml
cp-guard/src/: lib.rs  main.rs
xtask/: Cargo.toml
