[package]
name = "cp-guard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.95", features = ["backtrace"] }
axum = "0.7.9"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.6"
lazy-regex = "3.4.1"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tracing-subscriber = "0.3.19"
